--- a/backmatter.tex
+++ b/backmatter.tex
@@ -26,9 +26,6 @@
 \acro{2HDM}[2HDM]{Two Higgs Doublet Model}
 \acro{ECAL}[ECAL]{Electromagnetic calorimeter}
 \acro{HCAL}[HCAL]{Hadron calorimeter}
-\acro{CSC}[CSC]{Cathode strip chambers}
-\acro{RPC}[RPC]{Resistive plate chambers}
-\acro{DT}[DT]{Drift tubes}
 \acro{TIB}[TIB]{Tracker Inner Barrel}
 \acro{TID}[TID]{Tracker Inner Disk}
 \acro{TOB}[TOB]{Tracker Outer Barrel}
@@ -42,10 +39,11 @@
 \acro{BSM}[BSM]{Beyond the Standard Model}
 \acro{L1}[L1]{Level-1}
 \acro{HLT}[HLT]{High-level trigger}
-\acro{CSC}[CSC]{Cathode strip chambers}
-\acro{DT}[DT]{Drift tubes}
-\acro{RPC}[RPC]{Resistive plate chambers}
+\acro{CSCs}[CSCs]{Cathode strip chambers}
+\acro{DT}[DT]{Drift tube}
+\acro{RPCs}[RPCs]{Resistive plate chambers}
 \acro{DAQ}[DAQ]{Data Acquisition}
+\acro{WLCG}[WLCG]{Worldwide LHC Computing Grid}
 \end{acronym}
 
 
